# ikubectl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ikubectl/: __init__.py
tests/: test_version.py
