[tool.poetry]
name = "ikubectl"
version = "0.1.0"
description = "intractive wraper for kubectl, to intract and control kubernetes"
authors = ["Nitheesh Chandra <nitheesh.my@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: DevOps",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.1.12"
textual-inputs = "^0.1.2"
typing-extensions = { version = "^3.10.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
mkdocstrings = "^0.16.2"
mkdocs-material = "^7.3.5"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
